# Biome-Simulation

./: .gitignore  CMakeLists.txt  config.txt
include/collision/: CollisionDetection.h  CollisionResponse.h
include/config/: Config.h  JSONConfigurable.h
include/constants/: SimulationConstants.h  full_circle_vertices.txt  hollow_circle_vertices.txt
include/copyable/: Copyable.h
include/helpers/: GLHelpers.h  MathHelpers.h  ModelCreator.h  RNG.h
include/minion/: Minion.h
include/minion/controllers/: BraveController.h  CowardController.h  MinionController.h  NeuralNetController.h  NullController.h  RandomController.h
include/minion/controllers/decision_tree/: DTBranchNode.h  DTConst.h  DTNode.h  DTTerminalNode.h  DecisionTree.h  DecisionTreeController.h
include/minion/controllers/hardcoded/: HardcodedController.h
include/minion/controllers/neural_net/: NeuralNet.h  NeuralNetController.h
include/minion/crossover_operators/: CustomMinionCrossover.h  MinionCrossover.h  PickBetterMinionCrossover.h  PickRandomMinionCrossover.h
include/minion/crossover_operators/controller/: MinionControllerCrossover.h  PickBetterControllerCrossover.h
include/minion/crossover_operators/controller/decision_tree/: DTSubstSubTree.h  DecisionTreeControllerCrossover.h
include/minion/crossover_operators/controller/neural_net/: NeuralNetControllerCrossover.h  NeuralNetLayerWeightsCrossover.h  NeuralNetSingleLayerCrossover.h
include/minion/crossover_operators/object/: FitnessWeightedAverageObjectCrossover.h  MinionObjectCrossover.h  PickBetterObjectCrossover.h
include/minion/crossover_operators/senses/: FitnessWeightedAverageSensesCrossover.h  MinionSensesCrossover.h  PickBetterSensesCrossover.h
include/minion/factories/: ExplicitBehaviourMinionGenerator.h  MinionGenerator.h  NeuralNetMinionGenerator.h
include/minion/factories/decisiontree/: DecisionTreeMinionGenerator.h
include/minion/factories/explicit/: ExplicitBehaviourMinionGenerator.h
include/minion/factories/hardcoded/: HardcodedMinionGenerator.h
include/minion/factories/neuralnet/: NeuralNetMinionGenerator.h
include/minion/fitness/: ActivityFitness.h  Fitness.h  TimeLivedFitness.h
include/minion/mutation_operators/: CustomMinionMutation.h  DoNothingMinionMutation.h  MinionMutation.h
include/minion/mutation_operators/controller/: MinionControllerMutation.h
include/minion/mutation_operators/object/: GaussNoiseObjectMutation.h  MinionObjectMutation.h
include/minion/mutation_operators/senses/: GaussNoiseSensesMutation.h  MinionSensesMutation.h
include/minion/object/: MinionObject.h
include/minion/selection/: CurrentLongestLivingSelection.h  MostActiveSelection.h  RoulleteWheelSelection.h  Selection.h
include/minion/senses/: MinionSenses.h
include/minion/senses/simple/: SimpleMinionSenses.h
include/neuralnet/: NeuralNet.h
include/objects/: Boundary.h  HollowCircleObject.h  Object.h  Pellet.h
include/persistence/: JSONPersistable.h  Persistence.h
include/rendering/: ColorModel.h  Model.h  Renderer.h
include/shader_handling/: ProgramLoader.h  ShaderLoader.h
include/state/: State.h
resources/shaders/fragment_shaders/: fragment_shader.glsl
resources/shaders/vertex_shaders/: vertex_shader.glsl
src/: main.cpp  test
src/collision/: CollisionDetection.cpp  CollisionDetection.h  CollisionInfo.h  CollisionResponse.cpp  CollisionResponse.h
src/config/: Config.cpp
src/constants/: SimulationConstants.h  WindowConstants.h  teeth_circle_vertices.txt
src/helpers/: GLHelpers.cpp  MathHelpers.cpp  MathHelpers.h  MinionModelCreator.cpp  MinionModelCreator.h  ModelCreator.cpp  ModelCreator.h  RNG.cpp
src/minion/: Minion.cpp  Minion.h
src/minion/controllers/: BraveController.cpp  CowardController.cpp  CowardController.h  MinionController.cpp  MinionController.h  NeuralNetController.cpp  NullController.cpp  NullController.h  RandomController.cpp  RandomController.h
src/minion/controllers/decision_tree/: DTBranchNode.cpp  DTNode.cpp  DTTerminalNode.cpp  DecisionTree.cpp  DecisionTreeController.cpp
src/minion/controllers/hardcoded/: HardcodedController.cpp
src/minion/controllers/neural_net/: NeuralNet.cpp  NeuralNetController.cpp
src/minion/crossover_operators/: CustomMinionCrossover.cpp  PickBetterMinionCrossover.cpp  PickRandomMinionCrossover.cpp
src/minion/crossover_operators/controller/: PickBetterControllerCrossover.cpp
src/minion/crossover_operators/object/: FitnessWeightedAverageObjectCrossover.cpp  PickBetterObjectCrossover.cpp
src/minion/crossover_operators/senses/: FitnessWeightedAverageSensesCrossover.cpp  PickBetterSensesCrossover.cpp
src/minion/factories/: ExplicitBehaviourMinionGenerator.cpp  MinionGenerator.cpp  MinionGenerator.h  NeuralNetMinionGenerator.cpp
src/minion/factories/decisiontree/: DecisionTreeMinionGenerator.cpp
src/minion/factories/explicit/: ExplicitBehaviourMinionGenerator.cpp
src/minion/factories/hardcoded/: HardcodedMinionGenerator.cpp
src/minion/factories/neuralnet/: NeuralNetMinionGenerator.cpp
src/minion/fitness/: ActivityFitness.cpp  TimeLivedFitness.cpp
src/minion/mutation_operators/: CustomMinionMutation.cpp  DoNothingMinionMutation.cpp
src/minion/mutation_operators/object/: GaussNoiseObjectMutation.cpp
src/minion/mutation_operators/senses/: GaussNoiseSensesMutation.cpp
src/minion/object/: MinionObject.cpp  MinionObject.h
src/minion/selection/: CurrentLongestLivingSelection.cpp  MostActiveSelection.cpp  RoulleteWheelSelection.cpp  Selection.cpp
src/minion/senses/: MinionSenses.cpp  MinionSenses.h
src/minion/senses/simple/: SimpleMinionSenses.cpp
src/neuralnet/: NeuralNet.cpp  NeuralNet.h
src/objects/: Boundary.cpp  Boundary.h  CircleObject.cpp  CircleObject.h  HollowCircleObject.cpp  Minion.cpp  Minion.h  Object.cpp  Object.h  Pellet.cpp
src/persistence/: Persistence.cpp
src/rendering/: Camera.cpp  Camera.h  ColorModel.cpp  Model.cpp  Renderer.cpp  Renderer.h
src/shader_handling/: ProgramLoader.cpp  ShaderLoader.cpp
src/state/: Display.cpp  Display.h  State.cpp  State.h
(+32 files in other folders)
